tests/tldk/error/error-tldk-accept-return-value.pkt
// Test reorder pkts received out of order, receiver sending correct ACK.

// Establish a connection.
0   socket(..., SOCK_STREAM, IPPROTO_TCP) = 3
+0  setsockopt(3, SOL_SOCKET, SO_REUSEADDR, [1], 4) = 0

+0  bind(3, ..., ...) = 0
+0  listen(3, 1) = 0

+0 fcntl(3, F_GETFL) = 0x2 (flags O_RDWR)
+0 fcntl(3, F_SETFL, O_RDWR|O_NONBLOCK) = 0
+0 fcntl(3, F_GETFL) = 0x2 (flags O_RDWR)

+0  < S 0:0(0) win 32792 <mss 1000,sackOK,nop,nop,nop,wscale 7>
+0 ~ +1  > S. 0:0(0) ack 1 <...>

+.1 < . 1:1(0) ack 1 win 32792
+0.1  accept(3, ..., ...) = 4

// receive 3 pkts out of order
+0 < . 1:1001(1000) ack 1 win 32792
+0 ~ +1 > . 1:1(0) ack 1001

// read received data
+0 read(4, ..., 1000) = 1000
// +0 read(4, ..., 0) = 0
